Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberUndefined.quorum
class Main
    action Main
        number num = 0.0
        num = cast(number, undefined)
    end
end
